# boinc-rpc-gobject

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  boinc-1.0.deps  boinc-gobject-1.0.pc.in  client.vala  models.vala  rpc.vala  util.vala
